// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminAnalytics /> should render correctly - index 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="sc-ksZaOG duCsur"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG fJrBYQ"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG fJrBYQ"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG fJrBYQ"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG fJrBYQ"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminAnalytics /> should render correctly with admin user 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin analytics
    </h1>
  </div>
  <div>
    <button
      class="sc-bjUoiL hCXTDD admin-analytics__control"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Reload analytics
      </span>
    </button>
    <button
      class="sc-bjUoiL hCXTDD admin-analytics__control"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="admin-analytics__card-container"
  />
</div>
`;

exports[`<AdminAnalytics /> should render correctly with analytics 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin analytics
    </h1>
  </div>
  <div>
    <button
      class="sc-bjUoiL hCXTDD admin-analytics__control"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Reload analytics
      </span>
    </button>
    <button
      class="sc-bjUoiL hCXTDD admin-analytics__control"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="admin-analytics__card-container"
  />
</div>
`;

exports[`<AdminAnalytics /> should render correctly with initial state 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="sc-ksZaOG duCsur"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG fJrBYQ"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG fJrBYQ"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG fJrBYQ"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG fJrBYQ"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminAnalytics /> should render correctly with loadError 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin analytics
    </h1>
  </div>
  <div>
    <button
      class="sc-bjUoiL hCXTDD admin-analytics__control"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Reload analytics
      </span>
    </button>
    <button
      class="sc-bjUoiL hCXTDD admin-analytics__control"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Show filters
      </span>
    </button>
  </div>
  <span
    class="sc-dmRaPn bsyMtp"
  >
    <span
      class="sc-fLlhyt fMlfLK"
    >
      Could not load analytics
      <br />
      Something went wrong
    </span>
  </span>
  <div
    class="admin-analytics__card-container"
  />
</div>
`;

exports[`<AdminAnalytics /> should render correctly with loading=true 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin analytics
    </h1>
  </div>
  <div>
    <button
      class="sc-bjUoiL kQkTFv admin-analytics__control"
      disabled=""
      type="button"
    >
      <span
        class="sc-dIouRR dQEKTW"
      >
        Reload analytics
      </span>
      <div
        aria-hidden="true"
        class="sc-hHLeRK dAWrmh button__loading-spinner"
      >
        <div
          class="sc-fnykZs gCEWdg"
        >
          <div
            class="sc-fEOsli lkTqOy"
          />
          <div
            class="sc-fEOsli dxKqkG"
          />
          <div
            class="sc-fEOsli dGpXuh"
          />
          <div
            class="sc-fEOsli cIgRdg"
          />
          <div
            class="sc-fEOsli gZzohb"
          />
          <div
            class="sc-fEOsli zmfC"
          />
          <div
            class="sc-fEOsli gacaki"
          />
          <div
            class="sc-fEOsli cIrbJy"
          />
        </div>
      </div>
    </button>
    <button
      class="sc-bjUoiL hCXTDD admin-analytics__control"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="admin-analytics__card-container"
  />
</div>
`;

exports[`<AdminAnalytics /> should render correctly with user 1`] = `
<div>
  <div
    class="sc-iqcoie fvEXqf"
  >
    <h1
      class="sc-gsnTZi cTWewb sc-breuTD kCJHVK"
      id="admin-only"
    >
      Admin only
    </h1>
    <span
      class="sc-dmRaPn bsyMtp"
    >
      You need to be logged in with an admin account to view this content.
      <br />
      <a
        class="sc-iBkjds kXOvCG"
        href="/login"
      >
        Got a different admin account? Log in here.
      </a>
    </span>
  </div>
</div>
`;
